fix: contrast colour at the stepper component (#138)

--- a/package/govie/components/progress-stepper/_index.scss
+++ b/package/govie/components/progress-stepper/_index.scss
@@ -56,7 +56,7 @@
   }
 
   .govie-progress-stepper__label-icon-circle {
-    fill: govie-colour("mid-grey");
+    fill: govie-colour("dark-grey");
   }
 
   .govie-progress-stepper__completed-icon {
